add soundclip duration to chatmessages table
